--- a/src/pages/PackageDetailsPage.css
+++ b/src/pages/PackageDetailsPage.css
@@ -21,11 +21,10 @@
     border-radius: 50%;
 }
 
-/* Estilo para el evento más reciente */
+/* newest event */
 .timeline-item.active::before {
-    background-color: #0d6efd;
-    border: 2px solid #0a58ca;
-    box-shadow: 0 0 0 4px rgba(13, 110, 253, 0.25);
+    background-color: #004baf;
+    box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.25);
 }
 
 .timestamp {
